--- a/templates/tabs/einstellungen.html
+++ b/templates/tabs/einstellungen.html
@@ -16,7 +16,7 @@
                 else {
                     let sha = sha256(password + text);
                     fetch(location.origin + "/change_password/" + username, {
-                        headers: { "credentials": location.search.substr(location.search.indexOf("=") + 1), "new_pwd": sha }
+                        headers: { "credentials": user_credentials, "new_pwd": sha }
                     })
                         .then(response => {
                             response.text().then(res => {
@@ -33,7 +33,7 @@
     
     function delete_user(uname) {
         fetch(window.location.origin + "/delete_user/" + uname,
-            {headers: {"credentials": location.search.substr(window.location.search.indexOf("=") + 1)}})
+            {headers: {"credentials": user_credentials}})
         .then(response => {
             response.text().then(text => {
                 console.log(text);
