--- a/templates/main.html
+++ b/templates/main.html
@@ -6,10 +6,12 @@
   <style>
     html * {
       font-family: Arial, Helvetica, sans-serif;
+      font-size: min(7vw, 1cm);
     }
 
     h1 {
       text-align: center;
+      font-size: 200%;
     }
 
     /* Full-width input fields */
